# FabricBQSync

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
Config/: fabric-poc-bq-config.json
Data/: bq_data_types.csv
Docs/: Autodiscovery.md  BigQuery.md  ColumnMapping.md  ConfigExamples.md  Configuration.md  ConfigurationCode.md  ConfigurationSettings.md  ConvertToWatermark.md  DataExpiration.md  DataMaintenance.md  Destinations.md  Fabric.md  Home.md  Installation.md  LoadGroups.md  Logging.md  ObjectTypes.md  Optimizations.md  ReleaseLog.md  RotateCredentials.md  Scheduling.md  Synchronization.md  TableConfiguration.md  UpdateBQConnector.md
Docs/CommonScenarios/: HistoricalData.md
Docs/Examples/: Configuration_Code_Example.ipynb  Fabric-Sync-Installer-Billing-Export.ipynb  Watermark_Upgrade.ipynb
IntegrationTests/: README.md
IntegrationTests/BQ_Scripts/: BQ_Create_Tables.sql  BQ_Incremental_Load.sql  BQ_Initial_Load.sql
IntegrationTests/Config/: Integration_Test_Load_All.json  Integration_Test_Optimization.json  Integration_Test_UserConfig.json
IntegrationTests/Data/: integration_test_data.snappy.parquet
Notebooks/: BQ-Sync.ipynb  BQ_API.ipynb  BQ_LOAD_GROUP_CHECKPOINT.ipynb  BQ_Sync_Lib.ipynb  BQ_TBL_PART_LOADER.ipynb  Config.ipynb  DeltaTableMaintenance.ipynb  Installer.ipynb  Loader.ipynb  OneLake Catalog.ipynb  PythonWheelExample.ipynb  SetUp.ipynb  Unified-Prod.ipynb  Unified.ipynb
Notebooks/v2.0.0/: BQ-Sync-Environment.ipynb  BQ-Sync-Maintenance.ipynb  BQ-Sync.ipynb  Fabric-Sync-Environment.ipynb  Fabric-Sync-Installer.ipynb  Fabric-Sync-Maintenance-Environment.ipynb  Fabric-Sync-Maintenance.ipynb  Fabric-Sync.ipynb  Installer.ipynb  Upgrade.ipynb
Samples/Notebooks/: Databricks Delta Inventory Demo.ipynb  Fabric Delta Inventory Demo.ipynb
Setup/2.0.0/Config/: example-fabric-bq-config.json
Setup/2.0.0/SQL/: bq_sync_metadata.csv
Setup/Config/: fabric-bq-config.json
Setup/SQL/: MetadataRepo.sql
Setup/v2.0.0/SQL/: MetadataRepo.sql
Setup/v2.0.0/User Config/: sample_config.json
