[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "FabricSync"
version = "2.1.16"
dependencies = [
  "PyJWT>=2.6.0",
  "pydantic>=2.10.6",
  "pygithub>=2.5.0",
  "mlflow-skinny>=2.20.0",
  "google-cloud-bigquery>=3.29.0",
  "db-dtypes>=1.4.0"
]
requires-python = ">=3.11.8"
authors = [
  {name = "Christopher Price (MSFT)", email = "chriprice@microsoft.com"}
]
description = "Fabric BigQuery Data Sync Utility"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Fabric", "BigQuery", "Data Sync", "Mirror", "ETL"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/microsoft/FabricBQSync"
Documentation = "https://github.com/microsoft/FabricBQSync/blob/main/Docs/Home.md"
Repository = "https://github.com/microsoft/FabricBQSync.git"
Issues = "https://github.com/microsoft/FabricBQSync/issues"

[tool.setuptools.packages.find]
where = ["Packages/FabricSync"]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = { "fabricsync" = ["fabricsync.png"] }
